--- a/requirements.txt
+++ b/requirements.txt
@@ -152,7 +152,7 @@ pytrends==4.7.2
 pytrendsdaily==1.0.0
 pytz==2019.3
 PyWavelets==1.1.1
-pywin32==227
+pywin32
 pywinpty==0.5.7
 pywsd==1.2.4
 pyxlsb==1.0.6
