--- a/requirements.txt
+++ b/requirements.txt
@@ -1,210 +1,453 @@
-alembic==1.4.2
-altair==4.1.0
-appdirs==1.4.4
-appmode==0.8.0
-asn1crypto==1.3.0
+absl-py==0.10.0
+adal==1.2.4
+aiohttp==3.6.2
+aiohttp-cors==0.7.0
+aioredis==1.3.1
+alembic==1.4.1
+ansiwrap==0.8.4
+antlr4-python3-runtime==4.7.2
+applicationinsights==0.11.9
+argcomplete==1.12.1
+argon2-cffi @ file:///home/conda/feedstock_root/build_artifacts/argon2-cffi_1596629846022/work
+astor==0.8.1
+astroid==2.4.2
 async-generator==1.10
-attrs==19.3.0
-backcall==0.1.0
-bcrypt==3.1.7
-beautifulsoup4==4.9.0
-bleach==3.1.0
-blis==0.4.1
-bokeh==2.0.0
-Brotli==1.0.7
-business-calendar==0.2.1
-catalogue==1.0.0
-certifi==2020.4.5.1
-cffi==1.14.0
-chardet==3.0.4
-click==7.1.1
-cloudpickle==1.3.0
+async-timeout==3.0.1
+atari-py==0.2.6
+attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1599308529326/work
+autopep8==1.5.4
+azure-appconfiguration==1.1.0
+azure-batch==9.0.0
+azure-cli==2.12.1
+azure-cli-core==2.12.1
+azure-cli-telemetry==1.0.6
+azure-common==1.1.25
+azure-core==1.8.1
+azure-cosmos==3.2.0
+azure-datalake-store==0.0.50
+azure-functions-devops-build==0.0.22
+azure-graphrbac==0.61.1
+azure-identity==1.4.0
+azure-keyvault==1.1.0
+azure-keyvault-administration==4.0.0b1
+azure-loganalytics==0.1.0
+azure-mgmt-advisor==2.0.1
+azure-mgmt-apimanagement==0.2.0
+azure-mgmt-appconfiguration==0.6.0
+azure-mgmt-applicationinsights==0.1.1
+azure-mgmt-authorization==0.61.0
+azure-mgmt-batch==9.0.0
+azure-mgmt-batchai==2.0.0
+azure-mgmt-billing==0.2.0
+azure-mgmt-botservice==0.2.0
+azure-mgmt-cdn==5.0.0
+azure-mgmt-cognitiveservices==6.2.0
+azure-mgmt-compute==13.1.1
+azure-mgmt-consumption==2.0.0
+azure-mgmt-containerinstance==1.5.0
+azure-mgmt-containerregistry==2.8.0
+azure-mgmt-containerservice==9.4.0
+azure-mgmt-core==1.2.0
+azure-mgmt-cosmosdb==1.0.0
+azure-mgmt-datalake-analytics==0.2.1
+azure-mgmt-datalake-nspkg==3.0.1
+azure-mgmt-datalake-store==0.5.0
+azure-mgmt-datamigration==0.1.0
+azure-mgmt-deploymentmanager==0.2.0
+azure-mgmt-devtestlabs==4.0.0
+azure-mgmt-dns==2.1.0
+azure-mgmt-eventgrid==3.0.0rc7
+azure-mgmt-eventhub==4.1.0
+azure-mgmt-hdinsight==1.7.0
+azure-mgmt-imagebuilder==0.4.0
+azure-mgmt-iotcentral==3.0.0
+azure-mgmt-iothub==0.12.0
+azure-mgmt-iothubprovisioningservices==0.2.0
+azure-mgmt-keyvault==2.2.0
+azure-mgmt-kusto==0.3.0
+azure-mgmt-loganalytics==0.7.0
+azure-mgmt-managedservices==1.0.0
+azure-mgmt-managementgroups==0.2.0
+azure-mgmt-maps==0.1.0
+azure-mgmt-marketplaceordering==0.2.1
+azure-mgmt-media==2.2.0
+azure-mgmt-monitor==0.11.0
+azure-mgmt-msi==0.2.0
+azure-mgmt-netapp==0.12.0
+azure-mgmt-network==12.0.0
+azure-mgmt-nspkg==3.0.2
+azure-mgmt-policyinsights==0.5.0
+azure-mgmt-privatedns==0.1.0
+azure-mgmt-rdbms==3.0.0rc1
+azure-mgmt-recoveryservices==0.4.0
+azure-mgmt-recoveryservicesbackup==0.6.0
+azure-mgmt-redhatopenshift==0.1.0
+azure-mgmt-redis==7.0.0rc2
+azure-mgmt-relay==0.1.0
+azure-mgmt-reservations==0.6.0
+azure-mgmt-resource==10.2.0
+azure-mgmt-search==2.1.0
+azure-mgmt-security==0.4.1
+azure-mgmt-servicebus==0.6.0
+azure-mgmt-servicefabric==0.5.0
+azure-mgmt-signalr==0.4.0
+azure-mgmt-sql==0.21.0
+azure-mgmt-sqlvirtualmachine==0.5.0
+azure-mgmt-storage==11.2.0
+azure-mgmt-synapse==0.3.0
+azure-mgmt-trafficmanager==0.51.0
+azure-mgmt-web==0.47.0
+azure-multiapi-storage==0.4.1
+azure-nspkg==3.0.2
+azure-storage-blob==12.5.0
+azure-storage-common==1.4.2
+azure-synapse-accesscontrol==0.2.0
+azure-synapse-spark==0.2.0
+azureml-accel-models==1.15.0
+azureml-automl-core==1.15.0
+azureml-automl-runtime==1.15.0
+azureml-cli-common==1.15.0
+azureml-contrib-dataset==1.15.0
+azureml-contrib-fairness==1.15.0
+azureml-contrib-gbdt==1.15.0
+azureml-contrib-interpret==1.15.0
+azureml-contrib-notebook==1.15.0
+azureml-contrib-pipeline-steps==1.15.0
+azureml-contrib-reinforcementlearning==1.15.0
+azureml-contrib-server==1.15.0
+azureml-contrib-services==1.15.0
+azureml-core==1.15.0
+azureml-datadrift==1.15.0
+azureml-dataprep==2.2.3
+azureml-dataprep-native==22.0.0
+azureml-dataprep-rslex==1.0.1
+azureml-dataset-runtime==1.15.0
+azureml-defaults==1.15.0
+azureml-explain-model==1.15.0
+azureml-interpret==1.15.0
+azureml-mlflow==1.15.0
+azureml-model-management-sdk==1.0.1b6.post1
+azureml-opendatasets==1.15.0
+azureml-pipeline==1.15.0
+azureml-pipeline-core==1.15.0
+azureml-pipeline-steps==1.15.0
+azureml-samples @ file:///mnt/jupyter-azsamples
+azureml-sdk==1.15.0
+azureml-telemetry==1.15.0
+azureml-tensorboard==1.15.0
+azureml-train==1.15.0
+azureml-train-automl==1.15.0
+azureml-train-automl-client==1.15.0
+azureml-train-automl-runtime==1.15.0
+azureml-train-core==1.15.0
+azureml-train-restclients-hyperdrive==1.15.0
+azureml-widgets==1.15.0
+backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
+backports.functools-lru-cache==1.6.1
+backports.tempfile==1.0
+backports.weakref==1.0.post1
+bcrypt==3.2.0
+beautifulsoup4==4.9.2
+bleach @ file:///home/conda/feedstock_root/build_artifacts/bleach_1600454382015/work
+blessings==1.7
+blis==0.2.4
+boto==2.49.0
+boto3==1.15.4
+botocore==1.18.4
+Bottleneck==1.3.2
+brotlipy==0.7.0
+cachetools==4.1.1
+certifi==2020.6.20
+cffi @ file:///tmp/build/80754af9/cffi_1600699165083/work
+chardet @ file:///home/conda/feedstock_root/build_artifacts/chardet_1600358509800/work
+click==7.1.2
+cloudpickle==1.6.0
 colorama==0.4.3
-colour==0.1.5
-configparser==5.0.0
-coverage==5.2
-crayons==0.3.0
-cryptography==2.9.2
+colorful==0.5.4
+configparser==3.7.4
+contextlib2==0.6.0.post1
+contextvars==2.4
+convertdate @ file:///home/conda/feedstock_root/build_artifacts/convertdate_1599424212002/work
+coremltools @ git+https://github.com/apple/coremltools@13c064ed99ab1da7abea0196e4ddf663ede48aad
+cryptography @ file:///home/conda/feedstock_root/build_artifacts/cryptography_1600960163556/work
+cssselect==1.1.0
 cycler==0.10.0
 cymem==2.0.3
-Cython==0.29.15
-cytoolz==0.10.1
-dash==1.12.0
-dash-bootstrap-components==0.10.0
-dash-core-components==1.10.0
-dash-html-components==1.0.3
-dash-renderer==1.4.1
-dash-table==4.7.0
-dask==2.12.0
-dask-glm==0.2.0
-dask-ml==1.3.0
-decorator==4.4.1
+Cython @ file:///tmp/build/80754af9/cython_1594831565616/work
+databricks-cli==0.12.0
+dataclasses==0.7
+decorator==4.4.2
 defusedxml==0.6.0
-distlib==0.3.0
-distributed==2.12.0
-dnspython==1.16.0
+dill==0.3.2
+distro==1.5.0
+dm-tree==0.1.5
 docker==4.3.1
-email-validator==1.1.1
-endesive==1.5.6
-english==2020.7.0
+dotnetcore2==2.1.16
+encrypted-inference==0.9
 entrypoints==0.3
-et-xmlfile==1.0.1
+enum34==1.1.10
+fabric==2.5.0
+fairlearn==0.4.6
+fastai==1.0.61
+fastprogress==1.0.0
+fbprophet==0.5
 filelock==3.0.12
-findspark==1.3.0
-Flask==1.1.2
-Flask-Assets==2.0
-Flask-Compress==1.5.0
-Flask-Login==0.5.0
-Flask-Migrate==2.5.3
-Flask-SQLAlchemy==2.4.3
-Flask-WTF==0.14.3
-fsspec==0.6.2
+fire==0.3.1
+flake8==3.8.3
+Flask==1.0.3
+Flask-Cors==3.0.9
+fusepy==3.0.1
 future==0.18.2
-glob3==0.0.1
-google-trends-scraper==0.0.7
-graphviz==0.14.1
-HeapDict==1.0.1
-heatmapz==0.0.4
-html5lib==1.0.1
-idna==2.9
-imageio==2.8.0
-implicit==0.4.2
-importlib-metadata==1.5.0
-imutils==0.5.3
-inflect==4.1.0
-ipykernel==5.1.4
-ipython==7.12.0
+gast==0.2.2
+gensim==3.8.3
+gevent==20.9.0
+gitdb==4.0.5
+GitPython==3.1.8
+google==3.0.0
+google-api-core==1.22.3
+google-auth==1.22.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+googleapis-common-protos==1.52.0
+gorilla==0.3.0
+gpustat==0.6.0
+greenlet==0.4.17
+grpcio==1.32.0
+gunicorn==19.9.0
+gym==0.17.3
+h5py==2.10.0
+hiredis==1.1.0
+holidays==0.9.11
+horovod==0.19.1
+humanfriendly==8.2
+idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1593328102638/work
+idna-ssl==1.1.0
+imageio==2.9.0
+immutables==0.14
+importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1600910424878/work
+interpret-community==0.15.1
+interpret-core==0.2.1
+invoke==1.4.1
+ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1595446872696/work/dist/ipykernel-5.3.4-py3-none-any.whl
+ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1593235451385/work
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
+isodate==0.6.0
+isort==5.5.4
 itsdangerous==1.1.0
-jdcal==1.4.1
-jedi==0.16.0
-Jinja2==2.11.1
+javaproperties==0.5.1
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1595018839726/work
+jeepney==0.4.3
+Jinja2==2.11.2
+jmespath==0.10.0
 joblib==0.14.1
+jsmin==2.2.2
+json-logging-py==0.2
+json5 @ file:///home/conda/feedstock_root/build_artifacts/json5_1600692310011/work
+jsondiff==1.2.0
+jsonpickle==1.4.1
 jsonschema==3.2.0
-jupyter-client==6.1.7
-jupyter-core==4.6.1
-jupyter-server==0.1.1
-jupyterlab-pygments==0.1.2
-kiwisolver==1.0.1
-llvmlite==0.31.0
-locket==0.2.0
-lxml==4.5.0
+jupyter==1.0.0
+jupyter-client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1598486169312/work
+jupyter-console==6.2.0
+jupyter-core==4.6.3
+jupyter-server==1.0.4
+jupyterlab==2.1.4
+jupyterlab-pygments @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_pygments_1601375948261/work
+jupyterlab-server @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_server_1593951277307/work
+jupytext==1.6.0
+Keras==2.3.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+keras2onnx==1.6.0
+kiwisolver==1.2.0
+knack==0.7.2
+lazy-object-proxy==1.4.3
+liac-arff==2.5.0
+lightgbm==2.3.0
+lunardate==0.2.0
+lxml==4.5.2
+lz4==3.1.0
 Mako==1.1.3
+Markdown==3.2.2
+markdown-it-py==0.5.5
 MarkupSafe==1.1.1
-matplotlib==3.1.3
+matplotlib==3.2.1
+mccabe==0.6.1
 mistune==0.8.4
-monotonic==1.5
+mkl-fft==1.2.0
+mkl-random==1.1.0
+mkl-service==2.3.0
+mlflow==1.11.0
+mock==4.0.2
+msal==1.5.0
+msal-extensions==0.2.2
 msgpack==1.0.0
-multipledispatch==0.6.0
+msrest==0.6.19
+msrestazure==0.6.4
+multidict==4.7.6
 murmurhash==1.0.2
-nbclient==0.5.0
-nbconvert==5.6.1
-nbformat==5.0.4
-neotime==1.7.4
-nest-asyncio==1.4.1
-networkx==2.4
-nltk==3.5
-notebook==6.0.3
-numba==0.48.0
-numpy==1.18.1
+nb-conda==2.2.1
+nb-conda-kernels @ file:///home/conda/feedstock_root/build_artifacts/nb_conda_kernels_1601644743560/work
+nbclient @ file:///home/conda/feedstock_root/build_artifacts/nbclient_1598558657104/work
+nbconvert @ file:///home/conda/feedstock_root/build_artifacts/nbconvert_1600869647621/work
+nbformat @ file:///home/conda/feedstock_root/build_artifacts/nbformat_1594060262917/work
+ndg-httpsclient==0.5.1
+nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1601342677072/work
+networkx==2.5
+nimbusml==1.7.1
+notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1599742227154/work
+numexpr==2.7.1
+numpy==1.18.5
+nvidia-ml-py3==7.352.0
+oauthlib==3.1.0
 olefile==0.46
-opencv-python==4.2.0.34
-openpyxl==3.0.3
-oscrypto==1.2.0
-packaging==20.3
-pandas==1.0.1
-pandas-profiling==1.4.1
-pandas-ui==0.1
+onnx==1.6.0
+onnxconverter-common==1.6.0
+onnxmltools==1.4.1
+onnxruntime==1.3.0
+opencensus==0.7.10
+opencensus-context==0.1.1
+opencv-python==4.4.0.44
+opencv-python-headless==4.3.0.36
+opt-einsum==3.3.0
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1589925210001/work
+pandas==0.25.3
+pandas-ml==0.6.1
 pandocfilters==1.4.2
-pansi==2020.7.3
-paramiko==2.7.1
-parso==0.6.1
-partd==1.1.0
+papermill==1.2.1
+paramiko==2.7.2
+parsel==1.6.0
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1595548966091/work
+pathspec==0.8.0
 patsy==0.5.1
+pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==7.0.0
-pipenv==2020.5.28
-plac==1.1.3
-plotly==4.7.1
-preshed==3.0.2
-prometheus-client==0.7.1
-prompt-toolkit==2.0.10
-psutil==5.7.0
-py2neo==2020.0.0
-py4j==0.10.7
-pyarrow==0.16.0
-pycparser==2.20
-Pygments==2.5.2
+Pillow==6.2.1
+pkginfo==1.5.0.1
+plac==0.9.6
+pluggy==0.13.1
+pmdarima==1.1.1
+portalocker==1.7.1
+preshed==2.0.1
+prometheus-client @ file:///home/conda/feedstock_root/build_artifacts/prometheus_client_1590412252446/work
+prometheus-flask-exporter==0.18.0
+prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1598885455507/work
+protobuf==3.13.0
+psutil==5.7.2
+ptyprocess==0.6.0
+py-cpuinfo==5.0.0
+py-spy==0.3.3
+py4j==0.10.9
+pyarrow==1.0.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycocotools==2.0.0
+pycodestyle==2.6.0
+pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
+pydocstyle==5.1.1
+pyflakes==2.2.0
+pyglet==1.5.0
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1600347314331/work
+PyJWT==1.7.1
+pylint==2.6.0
+PyMeeus @ file:///home/conda/feedstock_root/build_artifacts/pymeeus_1589222711601/work
 PyNaCl==1.4.0
 pyodbc==4.0.30
 pyOpenSSL==19.1.0
-pyparsing==2.4.6
-PyPDF2==1.26.0
-pyrsistent==0.15.7
-pytextrank==2.0.2
+pyparsing==2.4.7
+pyrsistent @ file:///home/conda/feedstock_root/build_artifacts/pyrsistent_1599988189160/work
+PySocks==1.7.1
+pyspark==3.0.1
+pystan==2.19.0.0
 python-dateutil==2.8.1
-python-dotenv==0.13.0
 python-editor==1.0.4
-python-rake==1.4.5
-pytrends==4.7.2
-pytrendsdaily==1.0.0
-pytz==2019.3
+python-jsonrpc-server==0.4.0
+python-language-server==0.35.0
+pytorch-transformers==1.0.0
+pytz==2020.1
 PyWavelets==1.1.1
-pywinpty==0.5.7
-pywsd==1.2.4
-pyxlsb==1.0.6
-PyYAML==5.3
-pyzmq==18.1.1
-qgrid==1.3.1
-regex==2020.5.14
-requests==2.23.0
-retrying==1.3.3
-sacremoses==0.0.43
-seaborn==0.10.0
-selenium==3.141.0
+PyYAML==5.3.1
+pyzmq==19.0.2
+qtconsole==4.7.7
+QtPy==1.9.0
+querystring-parser==1.2.4
+ray==1.0.0
+redis==3.4.1
+regex==2020.9.27
+requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1592425495151/work
+requests-oauthlib==1.3.0
+rope==0.17.0
+rsa==4.6
+ruamel.yaml==0.16.12
+ruamel.yaml.clib==0.2.2
+s3transfer==0.3.3
+scikit-image==0.17.2
+scikit-learn==0.22.2.post1
+scipy==1.4.1
+scp==0.13.2
+scrapbook==0.2.0
+SecretStorage==3.1.2
 Send2Trash==1.5.0
+sentencepiece==0.1.91
+setuptools-git==1.2
+shap==0.34.0
 six==1.15.0
+skl2onnx==1.4.9
 sklearn==0.0
-sortedcontainers==2.1.0
-soupsieve==2.0
-spacy==2.3.2
-SQLAlchemy==1.3.17
+sklearn-pandas==1.7.0
+smart-open==1.9.0
+smmap==3.0.4
+snowballstemmer==2.0.0
+soupsieve==2.0.1
+spacy==2.1.8
+SQLAlchemy==1.3.13
+sqlparse==0.3.1
 srsly==1.0.2
-statsmodels==0.11.1
-tblib==1.6.0
-terminado==0.8.3
+sshtunnel==0.1.5
+statsmodels==0.10.2
+tabulate==0.8.7
+tenacity==6.2.0
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
+tensorboardX==2.1
+tensorflow==2.1.0
+tensorflow-estimator==2.1.0
+tensorflow-gpu==2.1.0
+termcolor==1.1.0
+terminado @ file:///home/conda/feedstock_root/build_artifacts/terminado_1600709666406/work
 testpath==0.4.4
-text-unidecode==1.3
-textblob==0.15.3
-thinc==7.4.1
-thrift==0.13.0
-tifffile==2020.6.3
-tokenizers==0.8.1rc1
-toolz==0.10.0
-tornado==6.0.3
-tqdm==4.46.0
+textwrap3==0.9.2
+thinc==7.0.8
+threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
+tifffile==2020.9.3
+toml==0.10.1
+torch==1.4.0
+torchvision==0.5.0
+tornado==6.0.4
+tqdm==4.49.0
 traitlets==4.3.3
-transformers==3.0.2
-typing-extensions==3.7.4.1
-urllib3==1.25.9
-vaderSentiment==3.3.1
-virtualenv==20.0.21
-virtualenv-clone==0.5.4
-voila==0.1.23
-voila-debug==0.0.1
-wasabi==0.7.0
-wcwidth==0.1.8
-webassets==2.0
-webdriver-manager==2.4.0
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
+ujson==3.2.0
+urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1595434816409/work
+voila==0.2.3
+vsts==0.1.25
+vsts-cd-manager==1.0.2
+w3lib==1.22.0
+waitress==1.4.4
+wasabi==0.8.0
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1600965781394/work
 webencodings==0.5.1
 websocket-client==0.57.0
-Werkzeug==1.0.1
+websockets==8.1
+Werkzeug==0.16.1
 widgetsnbextension==3.5.1
-Wikipedia-API==0.5.4
-wincertstore==0.2
-wn==0.0.23
-WTForms==2.3.1
-xlrd==1.2.0
-zict==2.0.0
-zipp==2.2.0
+wrapt==1.12.1
+xgboost==0.90
+xmltodict==0.12.0
+yapf==0.30.0
+yarl==1.6.0
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1600892581779/work
+zope.event==4.5.0
+zope.interface==5.1.2
