--- a/requirements.txt
+++ b/requirements.txt
@@ -7,14 +7,12 @@ alembic==1.4.1
 ansiwrap==0.8.4
 antlr4-python3-runtime==4.7.2
 applicationinsights==0.11.9
-argcomplete==1.12.1
-argon2-cffi @ file:///home/conda/feedstock_root/build_artifacts/argon2-cffi_1596629846022/work
+--argcomplete==1.12.1
 astor==0.8.1
 astroid==2.4.2
 async-generator==1.10
 async-timeout==3.0.1
 atari-py==0.2.6
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1599308529326/work
 autopep8==1.5.4
 azure-appconfiguration==1.1.0
 azure-batch==9.0.0
@@ -142,13 +140,11 @@ azureml-train-automl-runtime==1.15.0
 azureml-train-core==1.15.0
 azureml-train-restclients-hyperdrive==1.15.0
 azureml-widgets==1.15.0
-backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
 backports.functools-lru-cache==1.6.1
 backports.tempfile==1.0
 backports.weakref==1.0.post1
 bcrypt==3.2.0
 beautifulsoup4==4.9.2
-bleach @ file:///home/conda/feedstock_root/build_artifacts/bleach_1600454382015/work
 blessings==1.7
 blis==0.2.4
 boto==2.49.0
@@ -158,8 +154,6 @@ Bottleneck==1.3.2
 brotlipy==0.7.0
 cachetools==4.1.1
 certifi==2020.6.20
-cffi @ file:///tmp/build/80754af9/cffi_1600699165083/work
-chardet @ file:///home/conda/feedstock_root/build_artifacts/chardet_1600358509800/work
 click==7.1.2
 cloudpickle==1.6.0
 colorama==0.4.3
@@ -167,13 +161,9 @@ colorful==0.5.4
 configparser==3.7.4
 contextlib2==0.6.0.post1
 contextvars==2.4
-convertdate @ file:///home/conda/feedstock_root/build_artifacts/convertdate_1599424212002/work
-coremltools @ git+https://github.com/apple/coremltools@13c064ed99ab1da7abea0196e4ddf663ede48aad
-cryptography @ file:///home/conda/feedstock_root/build_artifacts/cryptography_1600960163556/work
 cssselect==1.1.0
 cycler==0.10.0
 cymem==2.0.3
-Cython @ file:///tmp/build/80754af9/cython_1594831565616/work
 databricks-cli==0.12.0
 dataclasses==0.7
 decorator==4.4.2
@@ -220,41 +210,32 @@ hiredis==1.1.0
 holidays==0.9.11
 horovod==0.19.1
 humanfriendly==8.2
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1593328102638/work
 idna-ssl==1.1.0
 imageio==2.9.0
 immutables==0.14
-importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1600910424878/work
 interpret-community==0.15.1
 interpret-core==0.2.1
 invoke==1.4.1
-ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1595446872696/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1593235451385/work
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
 isodate==0.6.0
 isort==5.5.4
 itsdangerous==1.1.0
 javaproperties==0.5.1
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1595018839726/work
 jeepney==0.4.3
 Jinja2==2.11.2
 jmespath==0.10.0
 joblib==0.14.1
 jsmin==2.2.2
 json-logging-py==0.2
-json5 @ file:///home/conda/feedstock_root/build_artifacts/json5_1600692310011/work
 jsondiff==1.2.0
 jsonpickle==1.4.1
 jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1598486169312/work
 jupyter-console==6.2.0
 jupyter-core==4.6.3
 jupyter-server==1.0.4
 jupyterlab==2.1.4
-jupyterlab-pygments @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_pygments_1601375948261/work
-jupyterlab-server @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_server_1593951277307/work
 jupytext==1.6.0
 Keras==2.3.1
 Keras-Applications==1.0.8
@@ -288,15 +269,9 @@ msrestazure==0.6.4
 multidict==4.7.6
 murmurhash==1.0.2
 nb-conda==2.2.1
-nb-conda-kernels @ file:///home/conda/feedstock_root/build_artifacts/nb_conda_kernels_1601644743560/work
-nbclient @ file:///home/conda/feedstock_root/build_artifacts/nbclient_1598558657104/work
-nbconvert @ file:///home/conda/feedstock_root/build_artifacts/nbconvert_1600869647621/work
-nbformat @ file:///home/conda/feedstock_root/build_artifacts/nbformat_1594060262917/work
 ndg-httpsclient==0.5.1
-nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1601342677072/work
 networkx==2.5
 nimbusml==1.7.1
-notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1599742227154/work
 numexpr==2.7.1
 numpy==1.18.5
 nvidia-ml-py3==7.352.0
@@ -311,14 +286,12 @@ opencensus-context==0.1.1
 opencv-python==4.4.0.44
 opencv-python-headless==4.3.0.36
 opt-einsum==3.3.0
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1589925210001/work
 pandas==0.25.3
 pandas-ml==0.6.1
 pandocfilters==1.4.2
 papermill==1.2.1
 paramiko==2.7.2
 parsel==1.6.0
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1595548966091/work
 pathspec==0.8.0
 patsy==0.5.1
 pexpect==4.8.0
@@ -330,9 +303,7 @@ pluggy==0.13.1
 pmdarima==1.1.1
 portalocker==1.7.1
 preshed==2.0.1
-prometheus-client @ file:///home/conda/feedstock_root/build_artifacts/prometheus_client_1590412252446/work
 prometheus-flask-exporter==0.18.0
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1598885455507/work
 protobuf==3.13.0
 psutil==5.7.2
 ptyprocess==0.6.0
@@ -344,19 +315,15 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycocotools==2.0.0
 pycodestyle==2.6.0
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
 pydocstyle==5.1.1
 pyflakes==2.2.0
 pyglet==1.5.0
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1600347314331/work
 PyJWT==1.7.1
 pylint==2.6.0
-PyMeeus @ file:///home/conda/feedstock_root/build_artifacts/pymeeus_1589222711601/work
 PyNaCl==1.4.0
 pyodbc==4.0.30
 pyOpenSSL==19.1.0
 pyparsing==2.4.7
-pyrsistent @ file:///home/conda/feedstock_root/build_artifacts/pyrsistent_1599988189160/work
 PySocks==1.7.1
 pyspark==3.0.1
 pystan==2.19.0.0
@@ -375,7 +342,6 @@ querystring-parser==1.2.4
 ray==1.0.0
 redis==3.4.1
 regex==2020.9.27
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1592425495151/work
 requests-oauthlib==1.3.0
 rope==0.17.0
 rsa==4.6
@@ -415,11 +381,9 @@ tensorflow==2.1.0
 tensorflow-estimator==2.1.0
 tensorflow-gpu==2.1.0
 termcolor==1.1.0
-terminado @ file:///home/conda/feedstock_root/build_artifacts/terminado_1600709666406/work
 testpath==0.4.4
 textwrap3==0.9.2
 thinc==7.0.8
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
 tifffile==2020.9.3
 toml==0.10.1
 torch==1.4.0
@@ -430,14 +394,12 @@ traitlets==4.3.3
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
 ujson==3.2.0
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1595434816409/work
 voila==0.2.3
 vsts==0.1.25
 vsts-cd-manager==1.0.2
 w3lib==1.22.0
 waitress==1.4.4
 wasabi==0.8.0
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1600965781394/work
 webencodings==0.5.1
 websocket-client==0.57.0
 websockets==8.1
@@ -448,6 +410,5 @@ xgboost==0.90
 xmltodict==0.12.0
 yapf==0.30.0
 yarl==1.6.0
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1600892581779/work
 zope.event==4.5.0
 zope.interface==5.1.2
