--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ alembic==1.4.1
 ansiwrap==0.8.4
 antlr4-python3-runtime==4.7.2
 applicationinsights==0.11.9
---argcomplete==1.12.1
+argcomplete==1.12.1
 astor==0.8.1
 astroid==2.4.2
 async-generator==1.10
