--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   MRO:
-    image: MRO:
+    image: voila-webapp:
     build:
-      context: ./Azure ContainerServicePoc
+      context: ./voila-webapp
       dockerfile: Dockerfile
